[package]
name = "cc-binds"
version = "0.1.0"
authors = ["alethéia <34745171+xirreal@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.55", features = [ "console" ]  }
js-sys = { version = "0.3.55" }
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
